platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/exam.exams-curated-exam02-v1.01571d61.attempt.001/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/exam.exams-curated-exam02-v1.01571d61.attempt.001/submission/volume_cube.c:1:2: error: #error forced failing integration submission
    1 | #error forced failing integration submission
      |  ^~~~~
